# raft

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  conanfile.py  vcpkg.json
.github/scripts/: conan-ci-setup.sh
.github/workflows/: doxygen.yml
docs/: CMakeLists.txt  Doxyfile.in  building.md  design.md
docs/pages/: cli.md  design.md  main.md
docs/pages/bugs/: 2025-08-16-initialization-race.md  lessons-learned.md
doxygen/: CMakeLists.txt  Doxyfile.in
doxygen/pages/: main.md
include/raft/: client.hpp  data.hpp  errors.hpp  network.hpp  persister.hpp  server.hpp
include/raft/enhanced/: server.hpp  typed_server.hpp
include/raft/fmt/: errors.hpp
include/raft/fs/: sqlite.hpp
include/raft/impl/: hash.h
include/raft/inmemory/: manager.hpp
raft/: CMakeLists.txt
raft-cli/: CMakeLists.txt
raft-cli/configs/: three-node-local.toml
raft-cli/proto/: CMakeLists.txt
raft-cli/proto/cli_protos/: kv_store.proto
raft-cli/src/: errors.hpp  main.cpp  serve.hpp
raft-cli/src/config/: config.cpp  config.hpp
raft-cli/src/store/: data.cpp  data.hpp  server.cpp  server.hpp
raft-cli/src/utils/: grpc_data.hpp  grpc_errors.hpp
raft/proto/: CMakeLists.txt
raft/proto/raft_protos/: enhanced.proto  raft.proto
raft/src/: client.cpp  network.cpp  server.cpp
raft/src/common/: mpsc_queue.hpp
raft/src/enhanced/: serialize.cpp  serialize.hpp  server.cpp
raft/src/fs/: sqlite.cpp
raft/src/impl/: log.cpp  log.hpp  persistence.cpp  persistence.hpp  state.hpp
raft/src/inmemory/: manager.cpp
raft/src/utils/: grpc_data.hpp  grpc_errors.hpp  serialize.cpp  serialize.hpp
spanner/: CMakeLists.txt
spanner-cli/: CMakeLists.txt
spanner/proto/: CMakeLists.txt
spanner/proto/spanner_protos/: spanner.proto
tests/: CMakeLists.txt
tests/raft-tests/: CMakeLists.txt
tests/raft-tests/src/: basic.cpp  election.cpp  main.cpp  network.cpp  server_tester.hpp
tests/raft-tests/src/enhanced/: server.cpp
tests/raft-tests/src/fs/: sqlite.cpp
tests/raft-tests/src/impl/: persistence.cpp
tests/raft-tests/src/inmemory/: manager.cpp
tests/raft-tests/src/mocks/: persister.hpp
tests/spanner-tests/: CMakeLists.txt
tests/spanner-tests/src/: basic.cpp
tools/: library_scanner.py
